force-app/main/default/objects/ClaimLine__x/ClaimLine__x.object-meta.xml
<CustomObject>
    <externalDataSource>ClaimsDataSource</externalDataSource>
    <externalName>public$claim_line</externalName>
    <label>Claim Line</label>
    <pluralLabel>Claim Lines</pluralLabel>
</CustomObject>