force-app/main/default/objects/ClaimLine__x/fields/AdjustedAmount__c.field-meta.xml
<CustomField>
    <fullName>AdjustedAmount__c</fullName>
    <inlineHelpText>Adjusted amount for the claim line.</inlineHelpText>
    <label>Adjusted Amount</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>