force-app/main/default/objects/ClaimLine__x/fields/ClaimId__c.field-meta.xml
<CustomField>
    <fullName>ClaimId__c</fullName>
    <externalDeveloperName>claim</externalDeveloperName>
    <inlineHelpText>ID of the claim that this record is related to.</inlineHelpText>
    <label>Claim</label>
    <length>16</length>
    <referenceTo>ClaimHeader__x</referenceTo>
    <relationshipLabel>Claim Lines</relationshipLabel>
    <relationshipName>Claim_Lines</relationshipName>
    <type>ExternalLookup</type>
</CustomField>