force-app/main/default/objects/ClaimLine__x/fields/ClaimLineStatusId__c.field-meta.xml
<CustomField>
    <fullName>ClaimLineStatusId__c</fullName>
    <externalDeveloperName>claim_status</externalDeveloperName>
    <inlineHelpText>ID of the claim status that this record is related to.</inlineHelpText>
    <label>Claim Line Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>