force-app/main/default/objects/ClaimLine__x/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <externalDeveloperName>from_date</externalDeveloperName>
    <inlineHelpText>Service start date for claim line.</inlineHelpText>
    <label>From</label>
    <type>Date</type>
</CustomField>