force-app/main/default/objects/ClaimLine__x/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <externalDeveloperName>line_number</externalDeveloperName>
    <inlineHelpText>Claim line ID number.</inlineHelpText>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>