force-app/main/default/objects/ClaimLine__x/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <externalDeveloperName>location</externalDeveloperName>
    <inlineHelpText>Location details of the place where service was performed.</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>