force-app/main/default/objects/ClaimLine__x/fields/LocationCode__c.field-meta.xml
<CustomField>
    <fullName>LocationCode__c</fullName>
    <externalDeveloperName>location_code</externalDeveloperName>
    <inlineHelpText>Location code of the place where service was performed.</inlineHelpText>
    <label>Location Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>