force-app/main/default/objects/ClaimLine__x/fields/Modifier__c.field-meta.xml
<CustomField>
    <fullName>Modifier__c</fullName>
    <inlineHelpText>Modifier information e.g. A procedure was performed on the left side</inlineHelpText>
    <label>Modifier</label>
    <length>64</length>
    <type>Text</type>
</CustomField>