force-app/main/default/objects/ClaimLine__x/fields/NDCCode__c.field-meta.xml
<CustomField>
    <fullName>NDCCode__c</fullName>
    <externalDeveloperName>ndc_code</externalDeveloperName>
    <inlineHelpText>Service code as defined by National Drug Code (NDC).</inlineHelpText>
    <label>NDC Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>