force-app/main/default/objects/ClaimLine__x/fields/PaidAmount__c.field-meta.xml
<CustomField>
    <fullName>PaidAmount__c</fullName>
    <inlineHelpText>Amount paid for the claim line.</inlineHelpText>
    <label>Paid Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>