force-app/main/default/objects/ClaimLine__x/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <externalDeveloperName>price</externalDeveloperName>
    <inlineHelpText>Price for the claim line.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>