force-app/main/default/objects/ClaimLine__x/fields/ProcedureCPTHCPCSId__c.field-meta.xml
<CustomField>
    <fullName>ProcedureCPTHCPCSId__c</fullName>
    <externalDeveloperName>procedure</externalDeveloperName>
    <inlineHelpText>Service procedure code based on Current Procedural Terminology (CPT) or Healthcare Common Procedure Coding System (HCPCS).</inlineHelpText>
    <label>Procedure</label>
    <length>64</length>
    <type>Text</type>
</CustomField>