force-app/main/default/objects/ClaimLine__x/fields/RenderingProvider__c.field-meta.xml
<CustomField>
    <fullName>RenderingProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <externalDeveloperName>rendering_provider</externalDeveloperName>
    <inlineHelpText>National Provider Identifier (NPI) of the rendering provider associated with this service.</inlineHelpText>
    <label>Rendering Provider</label>
    <referenceTo>HealthCloudGA__Provider__c</referenceTo>
    <relationshipLabel>Claim Lines</relationshipLabel>
    <relationshipName>Claim_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>