force-app/main/default/objects/ClaimLine__x/fields/RevenueCode__c.field-meta.xml
<CustomField>
    <fullName>RevenueCode__c</fullName>
    <externalDeveloperName>revenue_code</externalDeveloperName>
    <inlineHelpText>Revenue grouping code associated with the claim line.</inlineHelpText>
    <label>Revenue Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>