force-app/main/default/objects/ClaimLine__x/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <externalDeveloperName>source_system</externalDeveloperName>
    <inlineHelpText>Name of the system where this record was sourced from.</inlineHelpText>
    <label>Source System</label>
    <length>64</length>
    <type>Text</type>
</CustomField>