force-app/main/default/objects/ClaimLine__x/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <externalDeveloperName>to_date</externalDeveloperName>
    <inlineHelpText>Service end date for claim line.</inlineHelpText>
    <label>To</label>
    <type>Date</type>
</CustomField>