force-app/main/default/objects/ClaimLine__x/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <externalDeveloperName>unit</externalDeveloperName>
    <inlineHelpText>Number of units of service or drug provided to the patient.</inlineHelpText>
    <label>Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>